# ecg-plot

./: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  main.c  plotter.c  plotter.h
ecg-plot/: ecg-plot.cbp
